// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toJsonSchema should copy the properties from metadata 1`] = `
{
  "$schema": "http://json-schema.org/draft-06/schema#",
  "properties": {
    "date": {
      "format": "date-time",
      "type": "string",
    },
    "dictionary": {
      "description": "This field is optional.",
      "properties": {
        "foo": {},
      },
      "required": [
        "foo",
      ],
      "type": "object",
    },
    "list": {
      "description": "This is a list of strings",
      "items": [
        {
          "type": "string",
        },
      ],
      "title": "List of strings",
      "type": "array",
    },
    "timestamp": {
      "description": "UNIX timestamp.",
      "title": "Creation Timestamp",
      "type": "integer",
    },
  },
  "required": [
    "date",
    "timestamp",
    "list",
  ],
  "title": "Top Record",
  "type": "object",
}
`;

exports[`toJsonSchema should parse to a valid JSONSchema when set to 'omit' 1`] = `
{
  "properties": {
    "bMember": {
      "enum": [
        "B",
      ],
      "type": "string",
    },
    "bool": {
      "type": "boolean",
    },
    "dict": {
      "additionalProperties": {
        "anyOf": [
          {
            "type": "string",
          },
        ],
      },
      "type": "object",
    },
    "enum": {
      "anyOf": [
        {
          "enum": [
            "A",
          ],
          "title": "A",
          "type": "string",
        },
        {
          "enum": [
            "B",
          ],
          "title": "B",
          "type": "string",
        },
        {
          "enum": [
            "C",
          ],
          "title": "C",
          "type": "string",
        },
      ],
    },
    "literalBoolean": {
      "enum": [
        true,
      ],
      "type": "boolean",
    },
    "literalNumber": {
      "enum": [
        1,
      ],
      "type": "number",
    },
    "literalString": {
      "enum": [
        "literal",
      ],
      "type": "string",
    },
    "number": {
      "type": "number",
    },
    "oneof": {
      "anyOf": [
        {
          "properties": {
            "foo": {
              "type": "string",
            },
          },
          "required": [
            "foo",
          ],
          "type": "object",
        },
        {
          "properties": {
            "bar": {
              "type": "string",
            },
          },
          "required": [
            "bar",
          ],
          "type": "object",
        },
      ],
    },
    "optionalSelfCopy": {
      "properties": {
        "bMember": {
          "enum": [
            "B",
          ],
          "type": "string",
        },
        "bool": {
          "type": "boolean",
        },
        "dict": {
          "additionalProperties": {
            "anyOf": [
              {
                "type": "string",
              },
            ],
          },
          "type": "object",
        },
        "enum": {
          "anyOf": [
            {
              "enum": [
                "A",
              ],
              "title": "A",
              "type": "string",
            },
            {
              "enum": [
                "B",
              ],
              "title": "B",
              "type": "string",
            },
            {
              "enum": [
                "C",
              ],
              "title": "C",
              "type": "string",
            },
          ],
        },
        "id": {
          "type": "string",
        },
        "literalBoolean": {
          "enum": [
            true,
          ],
          "type": "boolean",
        },
        "literalNumber": {
          "enum": [
            1,
          ],
          "type": "number",
        },
        "literalString": {
          "enum": [
            "literal",
          ],
          "type": "string",
        },
        "number": {
          "type": "number",
        },
        "oneof": {
          "anyOf": [
            {
              "properties": {
                "foo": {
                  "type": "string",
                },
              },
              "required": [
                "foo",
              ],
              "type": "object",
            },
            {
              "properties": {
                "bar": {
                  "type": "string",
                },
              },
              "required": [
                "bar",
              ],
              "type": "object",
            },
          ],
        },
        "recordIntersection": {
          "allOf": [
            {
              "properties": {
                "a": {
                  "type": "string",
                },
              },
              "required": [
                "a",
              ],
              "type": "object",
            },
            {
              "properties": {
                "b": {
                  "type": "number",
                },
              },
              "required": [
                "b",
              ],
              "type": "object",
            },
          ],
        },
        "stringArray": {
          "items": [
            {
              "type": "string",
            },
          ],
          "type": "array",
        },
        "tuple": {
          "items": [
            {
              "properties": {
                "id": {
                  "type": "string",
                },
              },
              "required": [],
              "type": "object",
            },
            {
              "enum": [
                "separator",
              ],
              "type": "string",
            },
            {
              "type": "boolean",
            },
          ],
          "required": [
            "0",
            "1",
            "2",
          ],
          "type": "array",
        },
        "unionArray": {
          "items": [
            {
              "properties": {
                "foo": {
                  "type": "string",
                },
              },
              "required": [
                "foo",
              ],
              "type": "object",
            },
            {
              "properties": {
                "bar": {
                  "type": "string",
                },
              },
              "required": [
                "bar",
              ],
              "type": "object",
            },
          ],
          "type": "array",
        },
      },
      "required": [],
      "type": "object",
    },
    "recordIntersection": {
      "allOf": [
        {
          "properties": {
            "a": {
              "type": "string",
            },
          },
          "required": [
            "a",
          ],
          "type": "object",
        },
        {
          "properties": {
            "b": {
              "type": "number",
            },
          },
          "required": [
            "b",
          ],
          "type": "object",
        },
      ],
    },
    "stringArray": {
      "items": [
        {
          "type": "string",
        },
      ],
      "type": "array",
    },
    "tuple": {
      "items": [
        {
          "type": "string",
        },
        {
          "type": "number",
        },
      ],
      "required": [
        "0",
        "1",
      ],
      "type": "array",
    },
    "unionArray": {
      "items": [
        {
          "properties": {
            "foo": {
              "type": "string",
            },
          },
          "required": [
            "foo",
          ],
          "type": "object",
        },
        {
          "properties": {
            "bar": {
              "type": "string",
            },
          },
          "required": [
            "bar",
          ],
          "type": "object",
        },
      ],
      "type": "array",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "uuid",
    "number",
    "bool",
    "stringArray",
    "unionArray",
    "tuple",
    "literalString",
    "literalNumber",
    "literalBoolean",
    "enum",
    "bMember",
    "recordIntersection",
    "dict",
    "oneof",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema should parse to a valid JSONSchema when set to 'set-as-any' 1`] = `
{
  "properties": {
    "bMember": {
      "enum": [
        "B",
      ],
      "type": "string",
    },
    "bool": {
      "type": "boolean",
    },
    "customValidator": {
      "title": "Custom Validator (anonymous)",
    },
    "dict": {
      "additionalProperties": {
        "anyOf": [
          {
            "type": "string",
          },
        ],
      },
      "type": "object",
    },
    "enum": {
      "anyOf": [
        {
          "enum": [
            "A",
          ],
          "title": "A",
          "type": "string",
        },
        {
          "enum": [
            "B",
          ],
          "title": "B",
          "type": "string",
        },
        {
          "enum": [
            "C",
          ],
          "title": "C",
          "type": "string",
        },
      ],
    },
    "literalBoolean": {
      "enum": [
        true,
      ],
      "type": "boolean",
    },
    "literalNumber": {
      "enum": [
        1,
      ],
      "type": "number",
    },
    "literalString": {
      "enum": [
        "literal",
      ],
      "type": "string",
    },
    "number": {
      "type": "number",
    },
    "oneof": {
      "anyOf": [
        {
          "properties": {
            "foo": {
              "type": "string",
            },
          },
          "required": [
            "foo",
          ],
          "type": "object",
        },
        {
          "properties": {
            "bar": {
              "type": "string",
            },
          },
          "required": [
            "bar",
          ],
          "type": "object",
        },
      ],
    },
    "optionalSelfCopy": {
      "properties": {
        "bMember": {
          "enum": [
            "B",
          ],
          "type": "string",
        },
        "bool": {
          "type": "boolean",
        },
        "dict": {
          "additionalProperties": {
            "anyOf": [
              {
                "type": "string",
              },
            ],
          },
          "type": "object",
        },
        "enum": {
          "anyOf": [
            {
              "enum": [
                "A",
              ],
              "title": "A",
              "type": "string",
            },
            {
              "enum": [
                "B",
              ],
              "title": "B",
              "type": "string",
            },
            {
              "enum": [
                "C",
              ],
              "title": "C",
              "type": "string",
            },
          ],
        },
        "id": {
          "type": "string",
        },
        "literalBoolean": {
          "enum": [
            true,
          ],
          "type": "boolean",
        },
        "literalNumber": {
          "enum": [
            1,
          ],
          "type": "number",
        },
        "literalString": {
          "enum": [
            "literal",
          ],
          "type": "string",
        },
        "number": {
          "type": "number",
        },
        "oneof": {
          "anyOf": [
            {
              "properties": {
                "foo": {
                  "type": "string",
                },
              },
              "required": [
                "foo",
              ],
              "type": "object",
            },
            {
              "properties": {
                "bar": {
                  "type": "string",
                },
              },
              "required": [
                "bar",
              ],
              "type": "object",
            },
          ],
        },
        "recordIntersection": {
          "allOf": [
            {
              "properties": {
                "a": {
                  "type": "string",
                },
              },
              "required": [
                "a",
              ],
              "type": "object",
            },
            {
              "properties": {
                "b": {
                  "type": "number",
                },
              },
              "required": [
                "b",
              ],
              "type": "object",
            },
          ],
        },
        "stringArray": {
          "items": [
            {
              "type": "string",
            },
          ],
          "type": "array",
        },
        "stringSet": {
          "title": "Set",
        },
        "tuple": {
          "items": [
            {
              "properties": {
                "id": {
                  "type": "string",
                },
              },
              "required": [],
              "type": "object",
            },
            {
              "enum": [
                "separator",
              ],
              "type": "string",
            },
            {
              "type": "boolean",
            },
          ],
          "required": [
            "0",
            "1",
            "2",
          ],
          "type": "array",
        },
        "unionArray": {
          "items": [
            {
              "properties": {
                "foo": {
                  "type": "string",
                },
              },
              "required": [
                "foo",
              ],
              "type": "object",
            },
            {
              "properties": {
                "bar": {
                  "type": "string",
                },
              },
              "required": [
                "bar",
              ],
              "type": "object",
            },
          ],
          "type": "array",
        },
      },
      "required": [],
      "type": "object",
    },
    "recordIntersection": {
      "allOf": [
        {
          "properties": {
            "a": {
              "type": "string",
            },
          },
          "required": [
            "a",
          ],
          "type": "object",
        },
        {
          "properties": {
            "b": {
              "type": "number",
            },
          },
          "required": [
            "b",
          ],
          "type": "object",
        },
      ],
    },
    "stringArray": {
      "items": [
        {
          "type": "string",
        },
      ],
      "type": "array",
    },
    "stringSet": {
      "title": "Set",
    },
    "symbol": {
      "title": "Symbol",
    },
    "tuple": {
      "items": [
        {
          "type": "string",
        },
        {
          "type": "number",
        },
      ],
      "required": [
        "0",
        "1",
      ],
      "type": "array",
    },
    "undef": {
      "title": "undefined",
    },
    "unionArray": {
      "items": [
        {
          "properties": {
            "foo": {
              "type": "string",
            },
          },
          "required": [
            "foo",
          ],
          "type": "object",
        },
        {
          "properties": {
            "bar": {
              "type": "string",
            },
          },
          "required": [
            "bar",
          ],
          "type": "object",
        },
      ],
      "type": "array",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "uuid",
    "number",
    "bool",
    "stringSet",
    "stringArray",
    "unionArray",
    "tuple",
    "literalString",
    "literalNumber",
    "literalBoolean",
    "enum",
    "bMember",
    "recordIntersection",
    "dict",
    "oneof",
    "symbol",
    "undef",
    "customValidator",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema should set the specified additionalProperty 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "bMember": {
      "enum": [
        "B",
      ],
      "type": "string",
    },
    "bool": {
      "type": "boolean",
    },
    "dict": {
      "additionalProperties": {
        "anyOf": [
          {
            "type": "string",
          },
        ],
      },
      "type": "object",
    },
    "enum": {
      "anyOf": [
        {
          "enum": [
            "A",
          ],
          "title": "A",
          "type": "string",
        },
        {
          "enum": [
            "B",
          ],
          "title": "B",
          "type": "string",
        },
        {
          "enum": [
            "C",
          ],
          "title": "C",
          "type": "string",
        },
      ],
    },
    "literalBoolean": {
      "enum": [
        true,
      ],
      "type": "boolean",
    },
    "literalNumber": {
      "enum": [
        1,
      ],
      "type": "number",
    },
    "literalString": {
      "enum": [
        "literal",
      ],
      "type": "string",
    },
    "number": {
      "type": "number",
    },
    "oneof": {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "foo": {
              "type": "string",
            },
          },
          "required": [
            "foo",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "bar": {
              "type": "string",
            },
          },
          "required": [
            "bar",
          ],
          "type": "object",
        },
      ],
    },
    "optionalSelfCopy": {
      "additionalProperties": false,
      "properties": {
        "bMember": {
          "enum": [
            "B",
          ],
          "type": "string",
        },
        "bool": {
          "type": "boolean",
        },
        "dict": {
          "additionalProperties": {
            "anyOf": [
              {
                "type": "string",
              },
            ],
          },
          "type": "object",
        },
        "enum": {
          "anyOf": [
            {
              "enum": [
                "A",
              ],
              "title": "A",
              "type": "string",
            },
            {
              "enum": [
                "B",
              ],
              "title": "B",
              "type": "string",
            },
            {
              "enum": [
                "C",
              ],
              "title": "C",
              "type": "string",
            },
          ],
        },
        "id": {
          "type": "string",
        },
        "literalBoolean": {
          "enum": [
            true,
          ],
          "type": "boolean",
        },
        "literalNumber": {
          "enum": [
            1,
          ],
          "type": "number",
        },
        "literalString": {
          "enum": [
            "literal",
          ],
          "type": "string",
        },
        "number": {
          "type": "number",
        },
        "oneof": {
          "anyOf": [
            {
              "additionalProperties": false,
              "properties": {
                "foo": {
                  "type": "string",
                },
              },
              "required": [
                "foo",
              ],
              "type": "object",
            },
            {
              "additionalProperties": false,
              "properties": {
                "bar": {
                  "type": "string",
                },
              },
              "required": [
                "bar",
              ],
              "type": "object",
            },
          ],
        },
        "recordIntersection": {
          "allOf": [
            {
              "additionalProperties": false,
              "properties": {
                "a": {
                  "type": "string",
                },
              },
              "required": [
                "a",
              ],
              "type": "object",
            },
            {
              "additionalProperties": false,
              "properties": {
                "b": {
                  "type": "number",
                },
              },
              "required": [
                "b",
              ],
              "type": "object",
            },
          ],
        },
        "stringArray": {
          "items": [
            {
              "type": "string",
            },
          ],
          "type": "array",
        },
        "tuple": {
          "items": [
            {
              "additionalProperties": false,
              "properties": {
                "id": {
                  "type": "string",
                },
              },
              "required": [],
              "type": "object",
            },
            {
              "enum": [
                "separator",
              ],
              "type": "string",
            },
            {
              "type": "boolean",
            },
          ],
          "required": [
            "0",
            "1",
            "2",
          ],
          "type": "array",
        },
        "unionArray": {
          "items": [
            {
              "additionalProperties": false,
              "properties": {
                "foo": {
                  "type": "string",
                },
              },
              "required": [
                "foo",
              ],
              "type": "object",
            },
            {
              "additionalProperties": false,
              "properties": {
                "bar": {
                  "type": "string",
                },
              },
              "required": [
                "bar",
              ],
              "type": "object",
            },
          ],
          "type": "array",
        },
      },
      "required": [],
      "type": "object",
    },
    "recordIntersection": {
      "allOf": [
        {
          "additionalProperties": false,
          "properties": {
            "a": {
              "type": "string",
            },
          },
          "required": [
            "a",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "b": {
              "type": "number",
            },
          },
          "required": [
            "b",
          ],
          "type": "object",
        },
      ],
    },
    "stringArray": {
      "items": [
        {
          "type": "string",
        },
      ],
      "type": "array",
    },
    "tuple": {
      "items": [
        {
          "type": "string",
        },
        {
          "type": "number",
        },
      ],
      "required": [
        "0",
        "1",
      ],
      "type": "array",
    },
    "unionArray": {
      "items": [
        {
          "additionalProperties": false,
          "properties": {
            "foo": {
              "type": "string",
            },
          },
          "required": [
            "foo",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "bar": {
              "type": "string",
            },
          },
          "required": [
            "bar",
          ],
          "type": "object",
        },
      ],
      "type": "array",
    },
    "uuid": {
      "type": "string",
    },
  },
  "required": [
    "uuid",
    "number",
    "bool",
    "stringArray",
    "unionArray",
    "tuple",
    "literalString",
    "literalNumber",
    "literalBoolean",
    "enum",
    "bMember",
    "recordIntersection",
    "dict",
    "oneof",
  ],
  "type": "object",
}
`;

exports[`toJsonSchema should use the custom parsers 1`] = `
{
  "properties": {
    "custom": {
      "title": "Custom parser schema for validateFunction",
    },
    "function": {
      "title": "Custom parser schema for Function DataType",
    },
    "set": {
      "title": "Custom parser schema for Set DataType",
    },
    "symbol": {
      "title": "Custom parser schema for Symbol DataType",
    },
    "undefined": {
      "title": "Custom parser schema for Undefined DataType",
    },
  },
  "required": [
    "custom",
    "function",
    "set",
    "symbol",
    "undefined",
  ],
  "type": "object",
}
`;
